# image_cleaner

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  LICENSE  Makefile  README.md  requirements.txt  setup.cfg  setup.py
image_cleaner/: cli.py
requirements/: ci.in  ci.txt  dev.txt
tests/: test_cli.py
