[metadata]
name = image_cleaner

author = Martin Thoma
author_email = info@martin-thoma.de
maintainer = Martin Thoma
maintainer_email = info@martin-thoma.de

version = 0.1.3

description = remove metadata from images to enhance privacy
long_description = file: README.md
long_description_content_type = text/markdown
keywords = privacy, metadata, images, exif

platforms = Linux, MacOS X, Windows

url = https://github.com/MartinThoma/image_cleaner
download_url = https://github.com/MartinThoma/image_cleaner

license = MIT

# https://pypi.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 7 - Inactive
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities

[options]
zip_safe = false
packages = find:
python_requires = >= 3.0
install_requires =
    Pillow

[options.entry_points]
console_scripts =
    image_cleaner = image_cleaner.cli:entry_point
